# moko_phone_firewall

./: .gitignore  ChangeLog  Doxyfile  Makefile  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  build.sh  config.h  config.status  configure  configure.ac  core  env-export  libtool  phonefirewall-dev_0.01_4b47985a18de62b3_armv4t.opk  phonefirewall-dev_0.01_arm4t.ipk  phonefirewall-dev_0.01_armv4t.ipk  phonefirewall-dev_0.01_dbc3dd2a7ae8b043_armv4t.opk  phonefirewall-dev_0.02_b8e6cd50880d2ce2_armv4t.opk  phonefirewall.sql  run.sh
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
bin_test/: main_test  testphonefirewall
db/: phone-firewall.db  phonefirewall.db
doc/html/: annotated.html  classes.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  globals_vars.html  graph_legend.html  index.html  libphonefirewall_8h-source.html  libphonefirewall_8h.html  libphonefirewall_8h_032c45d6c7830492ddeaa8cabfc845c3_cgraph.map  libphonefirewall_8h_032c45d6c7830492ddeaa8cabfc845c3_icgraph.md5  libphonefirewall_8h_23f18831c9677c1a3b7f8cb6b20f3e02_cgraph.map  libphonefirewall_8h_36847ed3459e2a89038772ece42a017d_cgraph.map  libphonefirewall_8h_36847ed3459e2a89038772ece42a017d_cgraph.md5  libphonefirewall_8h_4457a4f0bcc3d648fec1e1a20b84d434_cgraph.map  libphonefirewall_8h_4eee00c845ad4a60eaccef8c41151ea4_cgraph.map  libphonefirewall_8h_4eee00c845ad4a60eaccef8c41151ea4_cgraph.md5  libphonefirewall_8h_651cdd0245f20256305b40f13bb9df2d_cgraph.md5  (+141 more)
openmoko-sample2/: Makefile  Makefile.in  aclocal.m4  config.status  configure  configure.ac
openmoko-sample2/src/: Makefile  Makefile.am  Makefile.in  phonefirewall_administration.c
po/: Makefile  Makefile.in
pytests/: daemon_dbus_testsuite.py  pf_testsuite.py
src/: Makefile  Makefile.am  Makefile.in  libphonefirewall.h  libphonefirewall.la  logfile.c  logfile.h  pf_administration.c  pf_administration.h  pf_daemon.c  pf_daemon.h  pf_search.c  pf_search.h  phonefirewall_administration.c  phonefirewall_administration.lo  phonefirewall_search.c
src/.deps/: phonefirewall_administration.Plo
src/.libs/: libphonefirewall.la  libphonefirewall.lai  libphonefirewall.so.0  libphonefirewall.so.0.0.0
src_test/: Makefile  Makefile.am  Makefile.in  libphonefirewall.h  main_test.c  testphonefirewall.c
src_test/.deps/: testphonefirewall.Po
tests/: CUnitAutomated-Listing.xml  CUnitAutomated-Results.xml
(+200 files in other folders)
